[gd_scene load_steps=6 format=3 uid="uid://dvjuacs5yy4f4"]

[ext_resource type="Script" path="res://states/admin/admin.gd" id="1_irqig"]
[ext_resource type="Theme" uid="uid://chlnkbertyww3" path="res://resources/theme/ornate-theme.tres" id="1_slhgr"]
[ext_resource type="PackedScene" uid="uid://iclenkh4oour" path="res://ui/sql_console/sql_console.tscn" id="3_6q754"]
[ext_resource type="Script" path="res://ui/log/log.gd" id="3_18qp0"]
[ext_resource type="PackedScene" uid="uid://bn1mqtxr8ohag" path="res://ui/level_browser/level_browser.tscn" id="4_vd6dk"]

[node name="Admin" type="Node"]
script = ExtResource("1_irqig")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_slhgr")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Nav" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ShowSqlButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/Nav"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Opens an console to run remote SQL on the server's database directly. No hand holding!"
text = "SQL Console"

[node name="UploadLevelButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/Nav"]
layout_mode = 2
tooltip_text = "Upload a Godot level to the server.
The server will store this as the main game level to send to players upon login."
text = "Upload Level
"

[node name="SqlConsole" parent="CanvasLayer/MarginContainer/VBoxContainer" instance=ExtResource("3_6q754")]
visible = false
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="LevelBrowser" parent="CanvasLayer/MarginContainer/VBoxContainer" instance=ExtResource("4_vd6dk")]

[node name="Log" type="RichTextLabel" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 10
scroll_following = true
script = ExtResource("3_18qp0")
